2007-06-27  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/admin.py
	(AdminModel.connectToManager.disconnected): Handle one case in
	which the returned deferred would not get fired. See #621.

2007-06-26  Andy Wingo  <wingo@pobox.com>

	* flumotion/worker/job.py: Rename the _deferredStarts member to
	_startSet.
	(JobProcessProtocol.__init__): Finish some renaming.
	(JobProcessProtocol.processEnded): Port to startSet. This code is
	pretty hacky.
	(DeferredStartSet): Remove, replaced with the code in startset.
	(JobHeaven.__init__, JobHeaven.spawn, JobAvatar.setMind.success)
	(JobAvatar.perspective_cleanShutdown): Port to startset. Fix one
	part of [5207] that didn't get rolled back. Fixes #620.

	* flumotion/common/startset.py (StartSet.createRegistered): Commit
	a similar fix to the startset as the one Mike just committed to
	the copy in worker/job.py.

2007-06-26  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/manager.py:
	  If a component with no manager-side state and no config logs in,
	  just immediately tell it to shut down and then disconnect it.
	  We can't possibly do anything useful with it other than this, and
	  the previous approach (creating a fake config) didn't handle it
	  right.
	  Fixes a private bug.

2007-06-26  Michael Smith <msmith@fluendo.com>

	* flumotion/worker/job.py:
	  Back out most of r5207, which didn't work right (it left stale
	  processes around).
	  Replace with a simpler patch that correctly handles restarting
	  components without temporarily making them sad.

2007-06-26  Christian Schaller <christian@fluendo.com>

	* data/91-flumotion-device-policy.fdi: Add
	policy file for HAL correct set device access

2007-06-26  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py (ComponentAvatar.getEaters):
	Return just the list of eater names.
	(ComponentAvatar.getFeedersForEater): New function, returns a list
	of remote feedIds to which an eater should connect.