@@ -1,3 +1,11 @@
+2007-06-27  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/manager/manager.py (Dispatcher.__init__,
+	  Dispatcher.cleanup, Dispatcher.removeAvatar, Vishnu.__init__):
+	* flumotion/twisted/portal.py (BouncerPortal.logout):
+	Remove keycards from manager bouncer when clients disconnect
+	from manager. Fixes #688.
+
 2007-06-27  Andy Wingo  <wingo@pobox.com>
 
 	* flumotion/admin/admin.py
